<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="STDBData" Id="{eca653ed-72a5-4f7d-a56d-e2ccd85185a1}">
    <Declaration><![CDATA[TYPE STDBData :
STRUCT
    {attribute 'TagName' := 'ID'}
	sShellyID		:	STRING(255);
	
    {attribute 'FieldName' := 'Temperature'}
	rTemperature	:	LREAL;
	
    {attribute 'FieldName' := 'Humidity'}
	rHumidity		:	LREAL;
	
    {attribute 'FieldName' := 'Power'}
	iBatteryLevel	:	LINT;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>